--- a/index.Rmd
+++ b/index.Rmd
@@ -203,9 +203,13 @@ We adapt the course as we go. To ensure that you work with the latest iteration 
 
 - Part E: Data Validation and Editing
     - [Lecture E](Contents/Material/Part E - Data validation/Lecture_E.html){target="_blank"}
-    - [Practical E](Contents/Material/Part E - Data validation/Practical_E.html){target="_blank"}
+    - [Practical E](Contents/Material/Part E - Data validaPractical_E_walkthrough.html){target="_blank"}
+    - [Impractical E](Contents/Material/Part E - Data validation/Practical_E.html){target="_blank"}
     - Data for the practical: [bands.txt](Contents/Material/Part E - Data validation/data/bands.txt){target="_blank"}, 
-      [unnamed.csv](Contents/Material/Part E - Data validation/data/unnamed.csv){target="_blank"}
+      [unnamed.csv](Contents/Material/Part E - Data validation/data/unnamed.csv){target="_blank"},
+      [people.txt](Contents/Material/Part E - Data validation/data/people.txt),
+      [peoplerules.txt](Contents/Material/Part E - Data validation/data/peoplerules.txt),
+      [dirty_iris.txt](Contents/Material/Part E - Data validation/data/dirty_iris.txt)
 
 - Part F: Imputation
 
