--- a/index.Rmd
+++ b/index.Rmd
@@ -186,6 +186,8 @@ We adapt the course as we go. To ensure that you work with the latest iteration 
     - [Lecture D Handout](Contents/Material/Part D - GLMs/Lecture_D_handout.html){target="_blank"}
     - [Practical D](Contents/Material/Part D - GLMs/Practical_D_walkthrough.html){target="_blank"}
     - [Impractical D](Contents/Material/Part D - GLMs/Practical_D.html){target="_blank"}
+    - Data: [cabinet](Contents/Material/Part D - GLMs/danish_cabinet.xls), 
+    [benefits](Contents/Material/Part D - GLMs/Benefits.xlsx)
 
 All lectures are in `html` format. Practicals are are provided both as naked questions but also with ample explanations and solutions - choose according to your taste!
 
