--- a/Contents/Material/Part D - GLMs/Data_exploration.Rmd
+++ b/Contents/Material/Part D - GLMs/Data_exploration.Rmd
@@ -15,7 +15,7 @@ data <- read_excel("Contents/Material/Part D - GLMs/Benefits.xlsx")
 
 ---
 
-2. Get a subset of the individuals that had more than 10 years of tenure and lost their job because the position was abolished. Hint: use `subset()` from the `dplyr` package.
+2. Get a subset of the individuals that had more than 10 years of tenure and lost their job because the position was abolished. Hint: use `subset()` and pipes from the `dplyr` package.
 ```{r, echo = FALSE, eval = FALSE, message = FALSE, warnings = FALSE}
 library(dplyr)
 data %>% subset(tenure > 10 & joblost == "position_abolished")
