--- a/Contents/Material/Part F - Imputation/Lecture_F.Rmd
+++ b/Contents/Material/Part F - Imputation/Lecture_F.Rmd
@@ -39,13 +39,16 @@ library(ggplot2) # plots
 
 ## `nhanes` data {.smaller}
 
+`age`: Age group (1=20-39, 2=40-59, 3=60+)
+
+`bmi`: Body mass index (kg/m**2)
+
+`hyp`: High blood pressure, hypertension (1=no,2=yes)
+
+`chl`: Total serum cholesterol (mg/dL)
+
 ```{r}
 head(nhanes, n = 10)
-```
-
-##
-```{r}
-summary(nhanes)
 ```
 
 
@@ -72,17 +75,7 @@ pattern
 
 ##
 ```{r}
-visdat::vis_miss(nhanes)
-```
-
-##
-```{r}
 naniar::gg_miss_upset(nhanes)
-```
-
-##
-```{r, message = FALSE, warning = FALSE}
-naniar::gg_miss_fct(x = nhanes, fct = age)
 ```
 
 
@@ -103,11 +96,12 @@ IMPUTED ~ MODEL_SPECIFICATION [ | GROUPING ]
 ```
 
 
-## Regression imputation
+## Regression imputation {.smaller}
 
 ```{r}
 imp_1 <- impute_lm(nhanes, bmi ~ age + hyp + chl)
 head(imp_1)
+head(nhanes)
 ```
 
 ## Median imputation
@@ -191,19 +185,6 @@ pred
 imp <- mice(nhanes, m = 4, init = pred, print = F)
 ```
 
-## Convergence
-
-```{r}
-plot(imp)
-```
-
-## Seed values
-
-```{r}
-
-imp <- mice(nhanes, m = 4, init = pred, print = F, seed = 101)
-
-```
 
 ## Changing imputation methods
 
@@ -252,13 +233,6 @@ fit
 ##
 
 ```{r}
-class(fit)
-ls(fit)
-```
-
-##
-
-```{r}
 summary(fit$analyses[[2]])
 ```
 
@@ -277,3 +251,29 @@ summary(pool.fit)
 - `mix`
 
 # Practical 
+
+# Extra slides
+
+## Visualization
+```{r, message = FALSE, warning = FALSE}
+naniar::gg_miss_fct(x = nhanes, fct = age)
+```
+
+
+## Visualization
+```{r}
+visdat::vis_miss(nhanes)
+```
+
+
+## Convergence
+
+```{r}
+plot(imp)
+```
+
+## Seed values
+
+```{r}
+imp <- mice(nhanes, m = 4, init = pred, print = F, seed = 101)
+```
