--- a/index.Rmd
+++ b/index.Rmd
@@ -209,7 +209,7 @@ We adapt the course as we go. To ensure that you work with the latest iteration 
     - [Practical E](Contents/Material/Part E - Data validaPractical_E_walkthrough.html){target="_blank"}
     - [Impractical E](Contents/Material/Part E - Data validation/Practical_E.html){target="_blank"}
     - Data for the practical: [bands.txt](Contents/Material/Part E - Data validation/data/bands.txt){target="_blank"}, 
-      [unnamed.csv](Contents/Material/Part E - Data validation/data/unnamed.csv){target="_blank"},
+      [unnamed.xls](Contents/Material/Part E - Data validation/data/unnamed.xls){target="_blank"},
       [people.txt](Contents/Material/Part E - Data validation/data/people.txt),
       [peoplerules.txt](Contents/Material/Part E - Data validation/data/peoplerules.txt),
       [dirty_iris.txt](Contents/Material/Part E - Data validation/data/dirty_iris.txt)
